<resources>
    <string name="app_name">Kiwi Sign-in</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="scan_qr">Scan QR</string>
    <string name="logout">Logout</string>
    <string name="image">Image</string>
    <string name="view_attendance">View Visits</string>
    <string name="present">Present</string>
    <string name="absent">Absent</string>
</resources>
