<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.login">

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/progressBar"
        android:visibility="gone"/>
    <ImageView
        android:id="@+id/log0"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:scaleType="fitCenter"
        android:src="@drawable/kiwisignin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_50sdp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/log0"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/login"
        android:textSize="@dimen/_30sdp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_20sdp"
        android:id="@+id/Login"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Login"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:id="@+id/inp_email"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/inp_email"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:id="@+id/inp_password"/>
    <TextView
        android:id="@+id/btnForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:text="Forgot Password?"
        app:layout_constraintEnd_toEndOf="@id/inp_password"
        app:layout_constraintTop_toBottomOf="@id/inp_password"
        android:layout_marginTop="@dimen/_2sdp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/errorMsg"
        android:textColor="@color/colorRed"
        app:layout_constraintTop_toBottomOf="@id/btnForgotPassword"
        app:layout_constraintStart_toStartOf="@id/inp_password"
        android:layout_marginTop="@dimen/_1sdp"/>
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintTop_toBottomOf="@id/errorMsg"
        app:layout_constraintStart_toStartOf="@id/inp_password"
        android:textColor="@color/colorWhite"
        android:background="@color/colorAccent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="Do not have account? Register Account"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_14ssp"
        android:id="@+id/btnRegister"/>
</androidx.constraintlayout.widget.ConstraintLayout>