<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Dashboard">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/toolbar"
        app:title="Kiwi Sign-In"
        android:background="@color/colorAccent"
        app:titleTextColor="@color/colorWhite"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:text="Confirm your account by confirmation email sent to your email address and login again."
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/colorRed"
        android:visibility="gone"
        android:id="@+id/confirmEmail"/>
    <LinearLayout
        android:id="@+id/row1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/confirmEmail"
        android:layout_marginTop="@dimen/_20sdp"
        android:weightSum="2"
        android:orientation="horizontal">
        <androidx.cardview.widget.CardView
            android:id="@+id/ScanQR"
            android:layout_width="0dp"
            app:cardBackgroundColor="#f7f7f7"
            android:layout_weight="1"
            android:layout_margin="@dimen/_10sdp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:background="#f7f7f7"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_margin="@dimen/_5sdp"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_70sdp"
                    android:src="@drawable/ic_qr_code"
                    android:tint="@color/colorAccent"
                    android:scaleType="fitCenter"/>
                <TextView
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/scan_qr"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_14sdp"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/ViewAttendance"
            android:layout_width="0dp"
            android:layout_weight="1"
            app:cardBackgroundColor="#f7f7f7"
            android:layout_margin="@dimen/_10sdp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:background="#f7f7f7"
                android:layout_width="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_margin="@dimen/_5sdp"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_70sdp"
                    android:src="@drawable/ic_calendar"
                    android:tint="@color/colorAccent"
                    android:scaleType="fitCenter"/>
                <TextView
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/view_attendance"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_14sdp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/row2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/row1"
        android:layout_marginTop="@dimen/_10sdp"
        android:weightSum="2"
        android:orientation="horizontal">
        <androidx.cardview.widget.CardView
            android:id="@+id/viewQR"
            android:layout_width="0dp"
            app:cardBackgroundColor="#f7f7f7"
            android:layout_weight="1"
            android:layout_margin="@dimen/_10sdp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:background="#f7f7f7"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_margin="@dimen/_5sdp"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_70sdp"
                    android:src="@drawable/ic_qr_code"
                    android:tint="@color/colorAccent"
                    android:scaleType="fitCenter"/>
                <TextView
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:text="View QR"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_14sdp"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <Button
        android:visibility="gone"
        android:id="@+id/btnURL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Change Base URL"
        android:background="@color/colorAccent"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/btnLogout"
        android:layout_margin="@dimen/_16sdp"/>
    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:background="@color/colorAccent"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/_16sdp"/>
</androidx.constraintlayout.widget.ConstraintLayout>